<resources>

    <string name="search">Tìm kiếm</string>
    <string name="lookup">Tra cứu thông tin</string>
    <string name="noti">Nhập mã sinh viên, họ tên hoặc lớp để tìm kiếm</string>

    <string name="system.exit">Thoát khỏi Look-up Student?</string>
    <string name="system.logout">Đăng xuất?</string>
    <string name="dialog.ok">Ok</string>
    <string name="dialog.cancel">Cancel</string>

    <string name="about_made_by">Phát triển bởi LuS Team</string>
    
    <string name="app_name">Look-up Student</string>
    <string name="login_name">Đăng nhập</string>
    <string name="skip_login_button">Tra cứu thông tin</string>
    <string name="login_noti">Nhập mã sinh viên của bạn để đăng nhập và nhận thông báo</string>
    <string name="skip_login_noti">Hoặc bỏ qua để tra cứu thông tin</string>
    <string name="id_student">Mã sinh viên</string>
    <string name="password">Mật khẩu</string>

    <string name="nav_item_info">Thông tin</string>
    <string name="nav_item_mark">Xem điểm</string>
    <string name="nav_item_schedule">Lịch học</string>
    <string name="nav_item_schedule_exam">Lịch thi</string>
    <string name="nav_item_debt">Công nợ</string>
    <string name="nav_item_logout">Đăng xuất</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_search">Tra cứu thông tin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="info_state">Trạng thái: </string>
    <string name="info_sex">Giới tính: </string>
</resources>
