<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:title="@string/nav_item_info" />
        <item
            android:id="@+id/nav_mark"
            android:title="@string/nav_item_mark" />
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/nav_item_schedule" />
        <item
            android:id="@+id/nav_schedule_exam"
            android:title="@string/nav_item_schedule_exam" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
